# Snake

./: CMakeLists.txt  README.md
res/: Board.qml  Cell.qml  GameOverScreen.qml  HelpScreen.qml  HighscoreScreen.qml  KeyboardKey.qml  WelcomeScreen.qml  main.qml  qml.qrc
src/: board.cpp  board.h  board_viewmodel.cpp  board_viewmodel.h  engine.cpp  engine.h  game.cpp  game.h  game_thread.cpp  game_thread.h  game_viewmodel.cpp  game_viewmodel.h  generate_fruit.cpp  main.cpp  snake.cpp  snake.h  utils.h
src/model/: board.cpp  board.h  board_model.cpp  board_model.h  game.cpp  game.h  game_model.cpp  game_model.h  snake.cpp  snake.h  snake_model.cpp  snake_model.h
src/viewmodel/: board_viewmodel.cpp  board_viewmodel.h  game_viewmodel.h  snake_viewmodel.cpp  snake_viewmodel.h
